--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -394,8 +394,7 @@ We now define a complete set of clause pairs $\DeltaVec$ such the first componen
 \end{align*}
 
 \end{mydef}
-
-We shall now prove several properties about these complete sets of clause pairs that are used for their general manipulation i.e. construction, union and updating with respect to an extended valuation. Firstly, we prove that a removal of a clause pair from a complete set of clause pairs along with the first component of that pair from the their formula maintains the completeness property. \\
+The first part of the definition describes the clause pairs stored in $\DeltaVec$. The first clause $C_1$ in the pair is a member of $\Delta$. The second clause $C_2$ is derived by unit resolution from $C_1$ unit no further applications of the unit resolution rule are possible. The second part of the complete definition states that if their is no clause pair corresponding to some clause in $\Delta$ then that clause has been satisfied. We shall now prove several properties about these complete sets of clause pairs that are used for their general manipulation i.e. construction, union and updating with respect to an extended valuation. Firstly, we prove that a removal of a clause pair from a complete set of clause pairs along with the first component of that pair from the their formula maintains the completeness property. \\
 \medskip
 \begin{mylemma}\label{lem:comprem}
 \begin{align*}
@@ -521,7 +520,7 @@ the number of unassigned variables where $\var{\Gamma} := \{\var{l}| (l \, n) \i
 We fix a formula $\Delta$ and a valuation $\Gamma$ such that $\consistent{\Gamma}$. By $\exists \DeltaVec \, \complete{\DeltaVec}{\Gamma}{\Delta} $ we obtain a complete set of derivations $\DeltaVec$ and we perform a case distinction on the most recently derived formulae:
 
 \subsection*{Case 1: $\DeltaVec = \emptyset$}
-We show $\compatible{\Gamma}{\Delta}$. We fix a model $M$ such that $M \models \Gamma$ then we  deduce that $M \models \Delta$. By $\complete{\emptyset}{\Gamma}{\Delta}$ we obtain $\forall c_1. \, \in \Delta \to \exists l( l \in C_1 \wedge l \in \lit{\Gamma})$ since there are no pairs of clauses in $\DeltaVec$. Since $M \models \Gamma$ and $\Gamma \models \Delta$ then $M \models \Delta$.
+We show $\compatible{\Gamma}{\Delta}$. We fix a model $M$ such that $M \models \Gamma$ then we  deduce that $M \models \Delta$. By $\complete{\emptyset}{\Gamma}{\Delta}$ we obtain $\forall C_1. C_1 \, \in \Delta \to \exists l( l \in C_1 \wedge l \in \lit{\Gamma})$ since there are no pairs of clauses in $\DeltaVec$. Since $M \models \Gamma$ and $\Gamma \models \Delta$ then $M \models \Delta$.
 
 \subsection*{Case 2: $\exists C_1. (C_1, \emptyset) \in \DeltaVec$}
 By $\complete{\DeltaVec}{\Gamma}{\Delta}$ we obtain $\Gamma' \clmodres{\Gamma}{\{ C_1 \} } \emptyset$ and $C_1 \in \Delta$ . This derivation can then be used to apply the $\Conflict$ rule with $\mybar{\Gamma'}$ as the learned clause. 
@@ -531,30 +530,30 @@ In this case we have derived a unit clause $\{ l \}$ in our set of clauses deriv
 %
 The induction hypothesis is instantiated with $\Delta$, $\Gamma, l \, \delta(\Gamma)$ and $\DeltaVec'$. The measure decreases since by $\complete{\DeltaVec}{\Gamma}{\Delta}$ we have assigned a new variable and the number of unassigned variables decreases: $ |\var{\Gamma, l \, \delta(\Gamma)}| = |\var{\Gamma}| + 1$ and $N - (|\var{\Gamma}| + 1) <  N - |\var{\Gamma}|$.   We then have two sub-cases: 
 %
-\subsection*{Sub-case 3.1: $\compatible{\Gamma, l \, \delta(\Gamma)}{\Delta}$}
-There exists a model $M$ that models $\Gamma, l \, \delta(\Gamma)$ and $\Delta$. This model also models any smaller valuation and therefore $\compatible{\Gamma}{\Delta}$.
-\subsection*{Sub-case 3.2: $\exists n \leq \delta(\Gamma). \, \exists \Delta' (\Gamma, l \, \delta(\Gamma))_n \vdash_{\Delta} \Delta$}
+\subsection*{Sub-case 3.1: $\compatible{\Gamma, (U \, l \, \delta(\Gamma))}{\Delta}$}
+There exists a model $M$ that models $\Gamma,( U \, l \, \delta(\Gamma))$ and $\Delta$. This model also models any smaller valuation and therefore $\compatible{\Gamma}{\Delta}$.
+\subsection*{Sub-case 3.2: $\exists n \leq \delta(\Gamma). \, \exists \Delta' (\Gamma, (U \, l \, \delta(\Gamma)))_n \vdash_{\Delta'} \Delta$}
 We fix an $n$ such that $n \leq \delta(\Gamma)$. Then we have the following two cases. If $n = \delta(\Gamma)$ then the unit literal has been used in the derivation and so we apply the $\Unit$ rule with $l$. Otherwise if $n < \delta(\Gamma)$ 
-then our unit literal has not been used during the derivation $\Gamma_{\leq n} = (\Gamma, l \, \delta(\Gamma))_n$ and we have a derivation that $\Gamma$ restricted to $n$ and $\Delta$ are unsatisfiable: $\Gamma_{\leq n} \vdash_{\Delta'} \Delta$.
+then our unit literal has not been used during the derivation $\Gamma_{\leq n} = (\Gamma, (U \, l \, \delta(\Gamma)))_n$ and we have a derivation that $\Gamma$ restricted to $n$ and $\Delta$ are unsatisfiable: $\Gamma_{\leq n} \vdash_{\Delta'} \Delta$.
 %
 \subsection*{Case 4: $\DeltaVec \neq \emptyset, \emptyset \notin \DeltaVec,  \forall l,C_1 \, ( (C_1 , \{ l \})  \notin \DeltaVec )$}
 Select a new literal $l$ from $\Delta$ such that $\var{l} \notin \Gamma$. Using Lemma \ref{lem:compsplit} it is possible to construct a new set of pairs of clauses $\DeltaVec'$ such that $\complete{\DeltaVec'}{\Delta}{\Gamma, \splitdecgone{l}}$.
-The induction hypothesis is instantiated with $\Delta$ and $ \Gamma, l \, \delta(\Gamma) + 1$ and $\DeltaVec'$. The measure decreases since we have assigned a new variable and the number of unassigned variables decreases: $ |\var{\Gamma, l \, \delta(\Gamma) + 1}| = |\var{\Gamma}| + 1$ and $N - (|\var{\Gamma}| + 1) <  N - |\var{\Gamma}|$.  We then have two cases:
+The induction hypothesis is instantiated with $\Delta$ and $ \Gamma, (S \, l \, \delta(\Gamma) + 1$ and $\DeltaVec'$. The measure decreases since we have assigned a new variable and the number of unassigned variables decreases: $ |\var{\Gamma, ( S \, l \, \delta(\Gamma) + 1)}| = |\var{\Gamma}| + 1$ and $N - (|\var{\Gamma}| + 1) <  N - |\var{\Gamma}|$.  We then have two cases:
 %
-\subsection*{Sub-case 4.1: $\compatible{\Gamma, l \, \delta(\Gamma) + 1}{\Delta}$}
+\subsection*{Sub-case 4.1: $\compatible{\Gamma, (S \, l \, \delta(\Gamma) + 1)}{\Delta}$}
 We have a model $M$ such that $M \models \Gamma$ and $M \models \Delta$ and therefore $\compatible{\Gamma}{\Delta}$ holds.
 %
-\subsection*{Sub-case 4.2: $ \exists n \leq \delta(\Gamma) + 1 \, \wedge  \exists \Delta' ( (\Gamma, l \, \delta(\Gamma) + 1)_{ \leq n}  \vdash_{\Delta'} \Delta)$}
+\subsection*{Sub-case 4.2: $ \exists n \leq \delta(\Gamma) + 1 \, \wedge  \exists \Delta' ( (\Gamma, (S \, l \, \delta(\Gamma) + 1)_{ \leq n})  \vdash_{\Delta'} \Delta)$}
 We fix an $n'$ such that $n' \leq \delta(\Gamma) + 1$ then we perform a case distinction on the size of $n'$.
 %
-\subsubsection*{Sub-case 4.2.1: $  n' = \delta(\Gamma) + 1 \, \wedge  \exists \Delta' ( (\Gamma, l \, \delta(\Gamma) + 1) _{\leq n'}  \vdash_{\Delta'} \Delta)$}
-The induction hypothesis is instantiated a second time with $\Delta, \Delta'$ and $\Gamma, \mybar{l} \, \delta(\Gamma) + 1$. We construct a new $\DeltaVec''$ such that $\complete{\DeltaVec''}{\Gamma}{\Delta'}$; this is built from the learned clauses. Then we merge $\DeltaVec'$ and $\DeltaVec''$ to create a new set $\DeltaVec' \cup \DeltaVec''$ of paired clauses such that $\complete{\DeltaVec' \cup \DeltaVec''}{\Gamma}{\Delta \cup \Delta'}$. This is done in two steps. Firstly we construct a new set of derivations $\DeltaVec''$ using Lemma \ref{lem:compgen} and then we merge that set of derivations with our existing one using Lemma \ref{lem:compunion}. This composed set of clause pairs is then used  along with Lemma \ref{lem:compsplit} to construct a new set of clause pairs $\DeltaVec''$ that is complete with respect to the valuation $\Gamma, \mybar{l} \, \delta(\Gamma) + 1$ .  This induction hypothesis then leads to two further cases: Either we have a model $M$ such that $M \models \Gamma, \mybar{l} \, \delta(\Gamma) + 1$ and $M \models \Delta, \Delta'$, in which case $\compatible{\Gamma}{\Delta}$ holds, or we have a $n'' \leq \delta(\Gamma) + 1$ and $(\Gamma, \mybar{l} \, \delta(\Gamma) + 1)_{\leq n''} \vdash_{\Delta''} \Delta, \Delta'$ in which case we apply the $\Split$ rule.
+\subsubsection*{Sub-case 4.2.1: $  n' = \delta(\Gamma) + 1 \, \wedge  \exists \Delta' ( (\Gamma, (S \,  l \, \delta(\Gamma) + 1)) _{\leq n'}  \vdash_{\Delta'} \Delta)$}
+The induction hypothesis is instantiated a second time with $\Delta, \Delta'$ and $\Gamma, (S \,  \mybar{l} \, \delta(\Gamma) + 1)$. We construct a new $\DeltaVec''$ such that $\complete{\DeltaVec''}{\Gamma}{\Delta'}$; this is built from the learned clauses. Then we merge $\DeltaVec'$ and $\DeltaVec''$ to create a new set $\DeltaVec' \cup \DeltaVec''$ of paired clauses such that $\complete{\DeltaVec' \cup \DeltaVec''}{\Gamma}{\Delta \cup \Delta'}$. This is done in two steps. Firstly we construct a new set of derivations $\DeltaVec''$ using Lemma \ref{lem:compgen} and then we merge that set of derivations with our existing one using Lemma \ref{lem:compunion}. This composed set of clause pairs is then used  along with Lemma \ref{lem:compsplit} to construct a new set of clause pairs $\DeltaVec''$ that is complete with respect to the valuation $\Gamma, (S \, \mybar{l} \, \delta(\Gamma) + 1)$ .  This induction hypothesis then leads to two further cases: Either we have a model $M$ such that $M \models \Gamma,(S \, \mybar{l} \, \delta(\Gamma) + 1)$ and $M \models \Delta, \Delta'$, in which case $\compatible{\Gamma}{\Delta}$ holds, or we have a $n'' \leq \delta(\Gamma) + 1$ and $(\Gamma,(S \, \mybar{l} \, \delta(\Gamma) + 1))_{\leq n''} \vdash_{\Delta''} \Delta, \Delta'$ in which case we apply the $\Split$ rule.
 \begin{comment}
 \textbf{We need to know that all of the learned clauses in $\Delta'$ are derivable from $\Gamma$ and $\Delta$ otherwise they are useless as the $\Conflict$ could not be applied to them. We know that they can be derived from some $\Gamma$ and $\Delta$ but how do we know that they are derivable from the current $\Gamma$ since it could be the case that backtracking has occured and there is now a smaller $\Gamma$.}
 \end{comment}
 %
 \subsubsection*{Sub-case 4.2.2: $ n' \leq \delta(\Gamma) \, \wedge  \exists \Delta' ( \Gamma_{ \leq n'}  \vdash_{\Delta'} \Delta)$} 
-This case corresponds to the backtracking in our program. We have derived that the formula is incompatible with a subset of the valuation at a lower decision level that does not include $l \, \delta(\Gamma) + 1$. We fix a $\Delta'$ such that $\Gamma_{\leq n'} \vdash_{\Delta'} \Delta$ and use $n'$ and $\Delta'$ to show $\exists n \leq \delta((\Gamma, l \, \delta(\Gamma) + 1)_{\leq n})). \, \exists \Delta' (\Gamma, l \, \delta(\Gamma) + 1)_{\leq n} \vdash_{\Delta'} \Delta$.
+This case corresponds to the backtracking in our program. We have derived that the formula is incompatible with a subset of the valuation at a lower decision level that does not include $l \, \delta(\Gamma) + 1$. We fix a $\Delta'$ such that $\Gamma_{\leq n'} \vdash_{\Delta'} \Delta$ and use $n'$ and $\Delta'$ to show $\exists n \leq \delta((\Gamma, ( S \, l \, \delta(\Gamma) + 1))_{\leq n})). \, \exists \Delta' (\Gamma, (S \, l \, \delta(\Gamma) + 1))_{\leq n} \vdash_{\Delta'} \Delta$.
 \end{proof}
 \end{mytheorem}
 %
@@ -570,7 +569,7 @@ This is proven by using Lemma \ref{lem:compgen} to generate a complete set of cl
 \end{mycorollary}
 
 \section{Formalising a Soundness and Completeness of the Modified DPLL and Unit Resolution Proof Systems in Minlog}
-We shall now describe how the soundness and completeness for the modified DPLL and  unit resolutions proof systems, along with their soundness and complete, are formalised in the Minlog system. The formalisation is based on the Minlog formalisation for the DPLL proof system describe in Chapter \ref{chapter:dpllminlog}; the basic operations such as those on sets have been reused where possible. The inductive definition for the modified unit resolution proof system (See Code Listing \ref{def:moduresminlog}.) contains four closure axioms corresponding to the four rules in the proof system (See Definition \ref{def:modures} .). These axioms inductively define a predicate \texttt{unitRes} that captures a unit resolution derivation.
+We shall now describe how the soundness and completeness for the modified DPLL and  unit resolutions proof systems are formalised in the Minlog system. The formalisation is based on the Minlog formalisation for the DPLL proof system describe in Chapter \ref{chapter:dpllminlog}; the basic operations such as those on sets have been reused where possible. The inductive definition for the modified unit resolution proof system (See Code Listing \ref{def:moduresminlog}.) contains four closure axioms corresponding to the four rules in the proof system (See Definition \ref{def:modures} .). These axioms inductively define a predicate \texttt{unitRes} that captures a unit resolution derivation.
 
 
 \begin{lstlisting}[caption = The Inductive Definition for the Modified Unit Resolution Proof System in Minlog, label = def:moduresminlog]
@@ -625,7 +624,7 @@ The inductive definition for the modified DPLL proof system inductively defines 
 )
 \end{lstlisting}
 
-The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that their exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but is not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the variable set of the formula. The third property states that each variable has at most one occurrence in the list. The fourth property states that all of the literals in the valuation must be in the formula. It also contains assumptions regarding the structure of the formula and clauses. The assumptions  \texttt{WellFormed f} states that all clauses follow the structure described in Chapter \ref{sect:minlogprelim} and \texttt{funique} states that every clause in the formula is unique.
+The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that there exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but  not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the formula. The third property states that each variable has at most one occurrence in the list. The fourth property states that all of the literals in the valuation must be in the formula. It also contains assumptions regarding the structure of the formula and clauses. The assumptions  \texttt{WellFormed f} states that all clauses follow the structure described in Chapter \ref{sect:minlogprelim} and \texttt{funique} states that every clause in the formula is unique.
 
 \begin{lstlisting}[caption = The Completeness Theorem for the Modified DPLL Proof System in Minlog, label = cl:moddpllcompleteness]
 (set-goal (pf "all val,f.  
